# kraken-ws-sdk

./: .env  .env.example  .gitignore  API_SHOWCASE.md  CHANGELOG.md  Cargo.toml  DEVELOPMENT.md  IMPROVEMENTS_SUMMARY.md  LICENSE  README.md  SDK_API.md  VISUALIZATION_API.md  WEB_DEMO_SUMMARY.md  demo_preview.html
.github/workflows/: ci.yml
.kiro/specs/kraken-ws-sdk/: design.md  requirements.md  tasks.md
benches/: performance_benchmarks.rs
demo/: README.md
demo/orderbook-visualizer/backend/: Cargo.toml
demo/orderbook-visualizer/backend/src/: orderbook_manager.rs  storage.rs
demo/orderbook-visualizer/docs/: ARCHITECTURE.md  EXAMPLES.md  USAGE.md
demo/orderbook-visualizer/frontend/: package.json
demo/orderbook-visualizer/frontend/public/: index.html
demo/orderbook-visualizer/frontend/src/: App.css  App.js
demo/web_demo/: README.md
demo/web_demo/static/: app.js
examples/: README.md  advanced_usage.rs  backpressure_demo.rs  basic_usage.rs  exchange_demo.rs  kraken_live_test.rs  latency_demo.rs  sdk_demo.rs  sequencing_demo.rs  test_direct_kraken.rs  trading_demo.rs
examples/web_demo/: Cargo.toml  README.md
examples/web_demo/src/: main.rs
examples/web_demo/static/: app.js  index.html
orderbook-visualizer/: HACKATHON.md  README.md  start.sh
orderbook-visualizer/backend/src/: main.rs
orderbook-visualizer/frontend/src/components/: OrderbookVisualizer.css  OrderbookVisualizer.jsx
scripts/: run_tests.sh  run_web_demo.sh
src/: alerts.rs  auth.rs  backpressure.rs  batch_orders.rs  client.rs  connection.rs  data.rs  error.rs  events.rs  exchange.rs  latency.rs  lib.rs  liquidity_heatmap.rs  main.rs  middleware.rs  orderbook.rs  orderflow.rs  parser.rs  performance.rs  private_ws.rs  rate_limit.rs  rest_client.rs  retry.rs  sdk.rs  sequencing.rs  spoofing_detection.rs  state.rs  subscription.rs  telemetry.rs  trading.rs  wasm.rs  whale_detection.rs
tests/: integration_tests.rs  parser_tests.rs  property_tests.rs  unit_tests.rs
