[package]
name = "kraken-web-demo"
version = "0.1.0"
edition = "2021"

[dependencies]
kraken-ws-sdk = { path = "../.." }
tokio = { version = "1.0", features = ["full"] }
warp = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio-tungstenite = "0.20"
futures-util = "0.3"
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1.0", features = ["v4"] }
rust_decimal = { version = "1.0", features = ["serde"] }
chrono = { version = "0.4", features = ["serde"] }